s/cushy content/cushy text/g

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Announcing Cushy Content: An Infima Content Theme For Lume"
+title: "Announcing Cushy Text: An Infima Content Theme For Lume"
 date: 2025-02-28
 author: Tim Post
 draft: true
@@ -9,7 +9,7 @@ tags:
   - announcements
 metas:
   lang: en
-  description: An announcement of Cushy Content - A Lume theme designed specifically to suit the needs of content-rich websites.
+  description: An announcement of Cushy Text - A Lume theme designed specifically to suit the needs of content-rich websites.
   tags:
     - Static Site Generators
     - Lume Themes
