--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -9,7 +9,7 @@ tags:
   - interactive-features
 metas:
   lang: en
-  description: Ideas for interactive features that could ship with the first beta version of Cushy Content.
+  description: Ideas for interactive features that could ship with the first beta version of Cushy Text.
   tags:
     - Static Site Generators
     - Lume Themes
