--- a/src/blog/thinking-behind-docs-feature.mdx
+++ b/src/blog/thinking-behind-docs-feature.mdx
@@ -9,7 +9,7 @@ tags:
   - documentation-archetype
 metas:
   lang: en
-  description: What was anticipated (and excluded) when planning the micro-docs feature for Cushy Content.
+  description: What was anticipated (and excluded) when planning the micro-docs feature for Cushy Text.
   tags:
     - Static Site Generators
     - Lume Themes
