We have a working blog archive page (or  the start of one)

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -4,7 +4,8 @@ date: 2025-02-28
 author: Tim Post
 draft: true
 layout: layouts/post.vto
-order: 0
+menu:
+  visible: true
 tags:
   - announcements
 metas:
@@ -21,15 +22,13 @@ metas:
   generator: true
 ---
 
-# {title}
-
 Some text here...
 
 <img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
 
 Some more text here
 
-{/*<!--more-->*/}
+{/*more*/}
 
 Some additional text here.
 
