--- a/src/blog/thinking-behind-docs-feature.mdx
+++ b/src/blog/thinking-behind-docs-feature.mdx
@@ -4,6 +4,8 @@ date: 2025-02-20
 author: Tim Post
 draft: true
 layout: layouts/post.vto
+menu:
+  visible: true
 tags:
   - announcements
   - documentation-archetype
@@ -21,15 +23,13 @@ metas:
   generator: true
 ---
 
-# {title}
-
 Some text here...
 
 <img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
 
 Some more text here
 
-{/*<!--more-->*/}
+{/*more*/}
 
 Some additional text here.
 
