Update content (which I'm writing along with the blog lol)

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Announcing Cushy Text: An Infima Content Theme For Lume"
+title: "Meet Cushy Text: An Infima Content Theme For Lume"
 date: 2025-02-28
 author: Tim Post
 draft: true
@@ -22,15 +22,31 @@ metas:
   generator: true
 ---
 
-Some text here...
+I've built dozens of documentation sites for everything from software to on-prem enterprise
+versions of Stack Overflow. My favorite tool to get something documented quickly has always 
+been Docusaurus, mostly because of how easy it is to make presentable, accessible and
+fully-responsive sites with Infima CSS.
+
+Lately, I've been working primarily with Deno because I'm just tired of Node, and in my
+semi-retired years where I just do this stuff for fun and tips, I'd rather work with things
+that "spark joy", if you know what I mean?
+
+So what if I took Infima, shoe-horned it into Lume, built a mini docs and blog system on
+top of both, and then added interactive features backed by Lume3's new Router middleware,
+DenoKV and Deno Deploy? And, no edge functions to mess with, or database strings to manage?
 
 <img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
 
-Some more text here
+***Yeah! That's what I said!!!!*** Read on, let me show you what I've got going here.
 
 {/*more*/}
 
-Some additional text here.
+When I set out to make Cushy Text, I thought about every time that I was hired as a 
+consultant for a new developer tool that needed a website, documentation and lots of 
+blog / tutorial content ***in a hurry***. My role usually entailed serving as the 
+initial DevRel, Marketing Manager, Support Specialist and doc site maintainer all-in-one.
+
+Sound familiar? 
 
 ## Another Heading
 
