--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -1,5 +1,5 @@
 ---
-title: Plans For Interactive Features For Release 0
+title: Plans For Interactive Features For First Release
 date: 2025-02-20
 author: Tim Post
 draft: true
@@ -23,11 +23,20 @@ metas:
   generator: true
 ---
 
-Some text here...
+One of my favorite things about Lume is how easy it makes adding a touch of interactivity
+to static sites through the new router middleware. From a documentarian perspective, this
+gives many the ability to communicate with their audiences more directly, outside of what 
+you can infer from analytics and data.
+
+I wanted to share more about ideas I had for additional islands of interactivity that
+text-heavy sites could use, with some thoughts on which ones I'm planning to try to bring
+to Cushy Text by default. 
 
 <img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
 
-Some more text here
+First, we should probably talk about the decision to have Deno Deploy as a dependency, 
+because it wasn't easy. But, the benefits of the tight coupling between bare-metal Deno,
+plus DenoKV, made it the right choice because it unlocks so many other possibilities.
 
 {/*more*/}
 
