--- a/src/blog/thinking-behind-docs-feature.mdx
+++ b/src/blog/thinking-behind-docs-feature.mdx
@@ -23,11 +23,20 @@ metas:
   generator: true
 ---
 
-Some text here...
+When I set out to make my ideal setup for a text-heavy site, I stopped and thought about
+the dozens and dozens of features that platforms like Docusuarus bring to the table and 
+remembered the approximately 30% of them that I've ever used. 
+
+The `docs/` implementation ended up being, rather accidentally, more robust than I planned
+because it lets a few lines of YAML in a file turn any directory into an auto-generated
+book complete with navigation.
 
 <img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
 
-Some more text here
+But this is a Lume theme aimed for text-heavy projects, not really a _documentation
+platform_ like Gitbook, Docusaurus or others. Here's a list of objectives that I want
+to achieve with it, as well as some non-goals, like making documentation the focus of 
+the theme.
 
 {/*more*/}
 
