new feature: latest blog post (auto) on home page

--- a/src/blog/thinking-behind-docs-feature.mdx
+++ b/src/blog/thinking-behind-docs-feature.mdx
@@ -1,5 +1,5 @@
 ---
-title: Thinking Behind "/docs" And How It Works
+title: Here's The Thinking Behind "/docs", And How It Works
 date: 2025-02-20
 author: Tim Post
 draft: true
