--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -1,6 +1,6 @@
 ---
-title: Plans For Interactive Features For First Release
-date: 2025-02-20
+title: Here Are Some Interactive Features Planned For The First Release
+date: 2025-03-01
 author: Tim Post
 draft: true
 layout: layouts/post.vto
@@ -18,7 +18,7 @@ metas:
     - Infima Theme For Lume
     - Static blog generator
     - Static documentation generator
-  image: /uploads/announcing-cushy-content.jpg
+  image: /uploads/interactive-feature-planning.jpg
   robots: true
   generator: true
 ---
@@ -32,7 +32,7 @@ I wanted to share more about ideas I had for additional islands of interactivity
 text-heavy sites could use, with some thoughts on which ones I'm planning to try to bring
 to Cushy Text by default. 
 
-<img class="blog_image" src="/uploads/announcing-cushy-content.jpg" alt="" title="" />
+<img class="blog_image" src="/uploads/interactive-feature-planning.jpg" alt="" title="" />
 
 First, we should probably talk about the decision to have Deno Deploy as a dependency, 
 because it wasn't easy. But, the benefits of the tight coupling between bare-metal Deno,
