--- a/src/docs/blog-feature.mdx
+++ b/src/docs/blog-feature.mdx
@@ -1,9 +1,9 @@
 ---
-title: Foobar Page
+title: The Blog Directory Feature
 order: 2
 ---
 
-# I Exist To Help Test Auto Nav In /docs
+# How Does `/blog` And The Blog Feature Work?
 
 This is some content. There is more like this.
 
