--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -1,9 +1,9 @@
 ---
-title: Barfoo Page
+title: Working With And Making Components
 order: 3
 ---
 
-# I Exist To Help Test Auto Nav In /docs
+# How Do I Use And Create New Feature Components?
 
 Also, ***BAR FOOOOOOOOO!***
 
