more shuffling of many papers while taking inventory of what's left to do

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Meet Cushy Text: An Infima Content Theme For Lume"
+title: "Meet Cushy Text: An Infima Content Theme For Lume 3!"
 date: 2025-03-03
 author: Tim Post
 draft: false
