--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -1,5 +1,5 @@
 ---
-title: Here Are Some Interactive Features Planned For The First Release
+title: "Here Are Some Interactive Features Planned For The First Release:"
 date: 2025-03-01
 author: Tim Post
 draft: true
