--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -4,7 +4,7 @@ menu:
   visible: false
 ---
 
-# Current Status: <span class="text--danger">Alpha</span>
+# Current Status: <span class="text--danger">Alpha & Unstable.</span>
 
 I'm building the site about Cushy Text with Cushy Text while I build Cushy Text.
 
